# nsa

./: .gitignore  README.md  pyproject.toml
src/apps/site/: apps.py  urls.py  views.py
src/apps/site/static/css/: about.css  advantages.css  common.css  header.css  main.css  photos.css
src/apps/site/static/js/: slider.js
src/apps/site/templates/: start_page.html
src/apps/slider/: admin.py  models.py
src/apps/slider/migrations/: 0001_initial.py  0002_alter_slider_options_alter_sliderentry_options_and_more.py
src/config/: settings.py  urls.py
